--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,22 @@
   "name": "Collated",
   "version": "1.13",
   "description": "Chrome extension to post browser tab urls to collated.net",
-  "background": {},
+  "background": {
+    "scripts" : [ "eventPage.js" ],
+    "persistent": "false"
+  },
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": "icons/icon128.png"
   },
+  "content_scripts": [
+    {
+      "js": [ "myscript.js" ]
+    }
+  ],
   "externally_connectable": {
     "matches": ["*://*.collated.net/*", "*://*.collated-dev.net/*"]
   },
   "manifest_version": 2,
-  "permissions": ["tabs", "*://*.collated.net/*", "*://*.collated-dev.net/*"]
+  "permissions": ["contextMenus", "tabs", "*://*.collated.net/*", "*://*.collated-dev.net/*"]
 }
