--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Chrome extension to post browser tab urls to collated.net",
   "background": {
     "scripts" : [ "eventPage.js" ],
-    "persistent": "false"
+    "persistent": false
   },
   "browser_action": {
     "default_popup": "popup.html",
@@ -12,7 +12,9 @@
   },
   "content_scripts": [
     {
-      "js": [ "myscript.js" ]
+      "matches": ["http://*/*", "https://*/*"],
+      "css": [],
+      "js": [ "contextMenu.js", "openDialog.js" ]
     }
   ],
   "externally_connectable": {
