--- a/manifest.json
+++ b/manifest.json
@@ -13,13 +13,17 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "css": [],
-      "js": [ "contextMenu.js", "openDialog.js" ]
+      "js": [ "contextMenu.js" ]
     }
   ],
   "externally_connectable": {
     "matches": ["*://*.collated.net/*", "*://*.collated-dev.net/*"]
   },
   "manifest_version": 2,
-  "permissions": ["contextMenus", "tabs", "*://*.collated.net/*", "*://*.collated-dev.net/*"]
+  "permissions": ["contextMenus", "tabs", "*://*.collated.net/*", "*://*.collated-dev.net/*"],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  }
 }
