--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": [ "contextMenu.js" ]
+      "js": [ "contextMenu.js", "openDialog.js" ]
     }
   ],
   "externally_connectable": {
