--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
     "matches": ["*://*.collated.net/*", "*://*.collated-dev.net/*"]
   },
   "manifest_version": 2,
-  "permissions": ["contextMenus", "tabs", "*://*.collated.net/*", "*://*.collated-dev.net/*"],
+  "permissions": ["contextMenus", "activeTab", "tabs", "*://*.collated.net/*", "*://*.collated-dev.net/*"],
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
